tests/inputs/invalid/types/bad_vars/bad_assignment_2.crbc
routine main () : integer is 
    
    var x : real is 2 + 3;
    var y : boolean is x;

    return 0;
end